--- a/app/views/conventions/show.html.erb
+++ b/app/views/conventions/show.html.erb
@@ -146,6 +146,68 @@
       <% end %>
     </div>
   </fieldset>
+
+  <fieldset class="box tabular">
+    <legend><%= l(:user_invoices, :num => @conv.invoices.count.to_s) %></legend>
+    <div class="contextual">
+      <%= link_to l(:label_invoice_new), new_invoice_path, :class => 'icon icon-add' if User.current.admin? %>
+    </div>
+    <div style="margin-bottom:16px;">
+      <% if !@conv.invoices.nil? && @conv.invoices.count > 0 %>
+          <div class="autoscroll">
+            <table class="list invoices">
+              <thead>
+              <tr>
+                <th style='width: 15%;text-align:left;'><%= l(:label_numero_fattura) %></th>
+                <th style='width: 20%;text-align:left;'><%= l(:label_data_fattura) %></th>
+                <th style='width: 15%;text-align:right;'><%= l(:label_sconto) %></th>
+                <th style='width: 15%;text-align:right;'><%= l(:label_iva) %></th>
+                <th style='width: 20%;text-align:right;'><%= l(:label_prezzo) %></th>
+                <th style='width: 10%;text-align:left;'><%= l(:button_download) %></th>
+                <th style='width: 5%;'></th>
+              </tr>
+              </thead>
+              <tbody>
+              <% @conv.invoices.sort_by(&:data_fattura).reverse.each do |invoice| %>
+                  <tr class="<%= cycle 'odd', 'even' %>">
+                    <td align="left">
+                      <%= link_to(h(invoice.to_s), invoice_path(invoice), :class => 'icon icon-summary') if User.current.admin? %>
+                      <%= h(invoice.to_s) if !User.current.admin? %>
+                    </td>
+                    <td><%= format_date(invoice.data_fattura) %></td>
+                    <td align="right"><%= h invoice.sconto %>
+                    <td align="right"><%= h invoice.iva %>
+                    <td align="right"><%= h invoice.tariffa %>
+                    <td align="left">
+                      <%= link_to('PDF', invoice_path(invoice, :format => :pdf), :class => 'icon icon-pdf') %>
+                    </td>
+                    <%# h smart_truncate(invoice.msg, 100) %></td>
+                    <td class="buttons"><%= link_to('', edit_invoice_path(invoice), :class => 'icon icon-edit') if User.current.admin? %>
+                      <%= link_to('', invoice_path(invoice), :class => 'icon icon-show') if !User.current.admin? %>
+                    </td>
+                    <!--td class="buttons"><%= link_to ('', invoice, :confirm => l(:text_are_you_sure), :method => :delete, :class => 'icon icon-del') if User.current.admin? %></td -->
+                  </tr>
+              <% end %>
+              <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td class="total buttons"><%= @conv.invoices.sum(:tariffa).to_f %></td>
+                <td></td>
+                <td></td>
+              </tr>
+            </table>
+          </div>
+      <% else %>
+        <p class="nodata"><%= l(:label_invoices_none) %></p>
+      <% end %>
+    </div>
+  </fieldset>
+
+
+
+
 </div>
 <div class="splitcontentright">
   <% unless @uprole.nil? %>
