add menu invoice + invoices list

--- a/app/views/conventions/show.html.erb
+++ b/app/views/conventions/show.html.erb
@@ -151,7 +151,7 @@
     <legend><%= l(:user_invoices, :num => @conv.invoices.count.to_s) %></legend>
     <div class="contextual">
       <%= link_to l(:label_invoice_new), new_invoice_path, :class => 'icon icon-add' if User.current.admin? %>
-    </div>
+    </div><h3>&nbsp;</h3>
     <div style="margin-bottom:16px;">
       <% if !@conv.invoices.nil? && @conv.invoices.count > 0 %>
           <div class="autoscroll">
