--- a/app/views/conventions/_form.html.erb
+++ b/app/views/conventions/_form.html.erb
@@ -1,8 +1,22 @@
 <%= f.error_messages %>
+<script type="text/javascript">
+  function resetu(){
+      document.getElementById("convention_user_id").selectedIndex = 0;
+  }
+</script>
+<style type="text/css">
+.icon{
+  height: 7px;
+  display: inline-block;
+  margin-left: 2em;
+  }
+</style>
 <div class="box tabular" xmlns="http://www.w3.org/1999/html">
   <h3><%= l(:label_abbo) %></h3>
 
-  <p><%= f.select :user_id, (User.all(:order => 'lastname').collect { |c| [c.lastname + ' ' + c.firstname + ' (' + c.login + ')', c.id] }), :include_blank => true, :required => false, :size => 60, :title => l(:label_convention_user) %></p>
+  <p><%= f.select :user_id, (User.all(:order => 'lastname').collect { |c| [c.lastname + ' ' + c.firstname + ' (' + c.login + ')', c.id] }), :include_blank => true, :required => false, :size => 60, :title => l(:label_convention_user),:label => l(:label_convention_user)  %>
+   <%= link_to("","#", :onclick => 'resetu()', :class => 'icon icon-del') if User.current.admin? %>
+  </p>
 
   <p><%= f.check_box :richiedinumeroregistrazione, :label => :label_richiedinumeroregistrazione %></p>
 
